ARROW-7282: [Python] IO functions should raise the right exceptions

When an Arrow IO function fails, it should be turned into the appropriate
Python exception subclass, e.g. FileNotFoundError in case the requested
file or directory is missing.

Closes #5960 from pitrou/ARROW-7282-python-ioerror-subclasses and squashes the following commits:

262616e29 <Antoine Pitrou> ARROW-7282:  IO functions should raise the right exceptions

Authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Antoine Pitrou <antoine@python.org>